Fixed overflow in about section

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ footer a:hover{
 #about{
     background: #F5F5F5;
     width: 100%;
-    height: 100%;
+    height: auto;
     color: #333;
     font-family: Montserrat;
     padding: 35px;
